# arithmetic-problems-generator

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: blog.md  blog.qmd
docs/assets/: Library_APIs.drawio  bibliography.bib
src/: lib.rs  main.rs  parser.rs
src/expression_generator/: error.rs  expression.rs  mod.rs  operand.rs
